xlwrite/antlr/XlWriteParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from XlWrite.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class XlWriteParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, STOP=101, 
		LCURLY=102, RCURLY=103, PIPE=104, PERCENT=105, MINUS=106, TABLE=107, CELL_RANGE=108, 
		COL_RANGE=109, ROW_RANGE=110, CELL=111, SHEET_PREFIX=112, HEXCOLOR=113, 
		FLOAT=114, INT=115, STRING=116, WS=117, BLOCK_COMMENT=118, LINE_COMMENT=119, 
		UNKNOWN_WORD=120;
	public const int
		RULE_file = 0, RULE_item = 1, RULE_selection = 2, RULE_sheet = 3, RULE_ref = 4, 
		RULE_tablePart = 5, RULE_filter = 6, RULE_element = 7, RULE_action = 8, 
		RULE_cfRule = 9, RULE_condition = 10, RULE_compareOp = 11, RULE_operand = 12, 
		RULE_datePeriod = 13, RULE_iconSet = 14, RULE_toggle = 15, RULE_hAlign = 16, 
		RULE_vAlign = 17, RULE_borderSide = 18, RULE_borderStyle = 19, RULE_colorValue = 20, 
		RULE_knownColor = 21, RULE_number = 22;
	public static readonly string[] ruleNames = {
		"file", "item", "selection", "sheet", "ref", "tablePart", "filter", "element", 
		"action", "cfRule", "condition", "compareOp", "operand", "datePeriod", 
		"iconSet", "toggle", "hAlign", "vAlign", "borderSide", "borderStyle", 
		"colorValue", "knownColor", "number"
	};

	private static readonly string[] _LiteralNames = {
		null, "'header'", "'body'", "'col'", "'column'", "'lastrow'", "'bold'", 
		"'italic'", "'underline'", "'strike'", "'strikethrough'", "'wrap'", "'fill'", 
		"'bg'", "'color'", "'fg'", "'font'", "'fontsize'", "'fs'", "'width'", 
		"'w'", "'height'", "'h'", "'format'", "'fmt'", "'align'", "'valign'", 
		"'border'", "'cond'", "'scale'", "'databar'", "'icons'", "'between'", 
		"'notbetween'", "'contains'", "'notcontains'", "'begins'", "'ends'", "'blank'", 
		"'nonblank'", "'error'", "'noerror'", "'top'", "'bottom'", "'aboveavg'", 
		"'belowavg'", "'duplicate'", "'unique'", "'formula'", "'='", "'!='", "'<>'", 
		"'<'", "'<='", "'>'", "'>='", "'today'", "'yesterday'", "'tomorrow'", 
		"'last7days'", "'thisweek'", "'lastweek'", "'nextweek'", "'thismonth'", 
		"'lastmonth'", "'nextmonth'", "'arrows'", "'flags'", "'traffic'", "'stars'", 
		"'symbols'", "'ratings'", "'on'", "'off'", "'true'", "'false'", "'left'", 
		"'center'", "'right'", "'middle'", "'all'", "'outline'", "'inside'", "'thin'", 
		"'medium'", "'thick'", "'dashed'", "'dotted'", "'double'", "'none'", "'rgb'", 
		"'red'", "'green'", "'blue'", "'black'", "'white'", "'gray'", "'grey'", 
		"'orange'", "'yellow'", "'purple'", "'stop'", "'{'", "'}'", "'|'", "'%'", 
		"'-'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "STOP", "LCURLY", "RCURLY", "PIPE", "PERCENT", 
		"MINUS", "TABLE", "CELL_RANGE", "COL_RANGE", "ROW_RANGE", "CELL", "SHEET_PREFIX", 
		"HEXCOLOR", "FLOAT", "INT", "STRING", "WS", "BLOCK_COMMENT", "LINE_COMMENT", 
		"UNKNOWN_WORD"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "XlWrite.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static XlWriteParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public XlWriteParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public XlWriteParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(XlWriteParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ItemContext[] item() {
			return GetRuleContexts<ItemContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemContext item(int i) {
			return GetRuleContext<ItemContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXlWriteVisitor<TResult> typedVisitor = visitor as IXlWriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((((_la - 107)) & ~0x3f) == 0 && ((1L << (_la - 107)) & 575L) != 0)) {
				{
				{
				State = 46;
				item();
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 52;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SelectionContext[] selection() {
			return GetRuleContexts<SelectionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectionContext selection(int i) {
			return GetRuleContext<SelectionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FilterContext[] filter() {
			return GetRuleContexts<FilterContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FilterContext filter(int i) {
			return GetRuleContext<FilterContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementContext[] element() {
			return GetRuleContexts<ElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementContext element(int i) {
			return GetRuleContext<ElementContext>(i);
		}
		public ItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_item; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.EnterItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.ExitItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXlWriteVisitor<TResult> typedVisitor = visitor as IXlWriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItemContext item() {
		ItemContext _localctx = new ItemContext(Context, State);
		EnterRule(_localctx, 2, RULE_item);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 54;
				selection();
				}
				}
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( ((((_la - 107)) & ~0x3f) == 0 && ((1L << (_la - 107)) & 575L) != 0) );
			State = 62;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PIPE) {
				{
				{
				State = 59;
				filter();
				}
				}
				State = 64;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 65;
				element();
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 536870848L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public RefContext @ref() {
			return GetRuleContext<RefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SheetContext sheet() {
			return GetRuleContext<SheetContext>(0);
		}
		public SelectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.EnterSelection(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.ExitSelection(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXlWriteVisitor<TResult> typedVisitor = visitor as IXlWriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectionContext selection() {
		SelectionContext _localctx = new SelectionContext(Context, State);
		EnterRule(_localctx, 4, RULE_selection);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SHEET_PREFIX || _la==STRING) {
				{
				State = 70;
				sheet();
				}
			}

			State = 73;
			@ref();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SheetContext : ParserRuleContext {
		public SheetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sheet; } }
	 
		public SheetContext() { }
		public virtual void CopyFrom(SheetContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PrefixSheetContext : SheetContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHEET_PREFIX() { return GetToken(XlWriteParser.SHEET_PREFIX, 0); }
		public PrefixSheetContext(SheetContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.EnterPrefixSheet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.ExitPrefixSheet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXlWriteVisitor<TResult> typedVisitor = visitor as IXlWriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrefixSheet(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class QuotedSheetContext : SheetContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(XlWriteParser.STRING, 0); }
		public QuotedSheetContext(SheetContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.EnterQuotedSheet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.ExitQuotedSheet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXlWriteVisitor<TResult> typedVisitor = visitor as IXlWriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuotedSheet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SheetContext sheet() {
		SheetContext _localctx = new SheetContext(Context, State);
		EnterRule(_localctx, 6, RULE_sheet);
		try {
			State = 77;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRING:
				_localctx = new QuotedSheetContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 75;
				Match(STRING);
				}
				break;
			case SHEET_PREFIX:
				_localctx = new PrefixSheetContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 76;
				Match(SHEET_PREFIX);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RefContext : ParserRuleContext {
		public RefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ref; } }
	 
		public RefContext() { }
		public virtual void CopyFrom(RefContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ColumnRangeRefContext : RefContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COL_RANGE() { return GetToken(XlWriteParser.COL_RANGE, 0); }
		public ColumnRangeRefContext(RefContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.EnterColumnRangeRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.ExitColumnRangeRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXlWriteVisitor<TResult> typedVisitor = visitor as IXlWriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColumnRangeRef(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RowRangeRefContext : RefContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ROW_RANGE() { return GetToken(XlWriteParser.ROW_RANGE, 0); }
		public RowRangeRefContext(RefContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.EnterRowRangeRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.ExitRowRangeRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXlWriteVisitor<TResult> typedVisitor = visitor as IXlWriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRowRangeRef(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CellRangeRefContext : RefContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CELL_RANGE() { return GetToken(XlWriteParser.CELL_RANGE, 0); }
		public CellRangeRefContext(RefContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.EnterCellRangeRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.ExitCellRangeRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXlWriteVisitor<TResult> typedVisitor = visitor as IXlWriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCellRangeRef(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CellRefContext : RefContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CELL() { return GetToken(XlWriteParser.CELL, 0); }
		public CellRefContext(RefContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.EnterCellRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.ExitCellRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXlWriteVisitor<TResult> typedVisitor = visitor as IXlWriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCellRef(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TableRefContext : RefContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TABLE() { return GetToken(XlWriteParser.TABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TablePartContext tablePart() {
			return GetRuleContext<TablePartContext>(0);
		}
		public TableRefContext(RefContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.EnterTableRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXlWriteListener typedListener = listener as IXlWriteListener;
			if (typedListener != null) typedListener.ExitTableRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXlWriteVisitor<TResult> typedVisitor = visitor as IXlWriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTableRef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RefContext @ref() {
		RefContext _localctx = new RefContext(Context, State);
		EnterRule(_localctx, 8, RULE_ref);
		int _la;
		try {
			State = 87;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case CELL:
				_localctx = new CellRefContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 79;
				Match(CELL);
				}
				break;
			case CELL_RANGE:
				_localctx = new CellRangeRefContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 80;
				Match(CELL_RANGE);
				}
				break;
			case COL_RANGE:
				_localctx = new ColumnRangeRefContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 81;
				Match(COL_RANGE);
				}
				break;
			case ROW_RANGE:
				_localctx = new RowRangeRefContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 82;
				Match(ROW_RANGE);
				}
				break;
			case TABLE:
				_localctx = new TableRefContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 83;
				Match(TABLE);
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 62L) != 0)) {
					{
					State = 84;
					tablePart();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
